# BFU_C-

./: .gitignore  CMakeLists.txt  Ex.txt  figures.h  input.txt  main.cpp  task.txt
ext/SFML/lib/cmake/SFML/: SFMLStaticTargets.cmake
math-figures/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Ellipse.cpp  Ellipse.h  Figure.h  Parallelogram.cpp  Parallelogram.h  Rectangle.cpp  Rectangle.h  RectangularParallelepiped.cpp  RectangularParallelepiped.h  RegularTetrahedron.cpp  RegularTetrahedron.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
